--- a/10_Theme_09_v2/bin/AnperoFrontend.dll.config
+++ b/10_Theme_09_v2/bin/AnperoFrontend.dll.config
@@ -227,7 +227,7 @@
   <applicationSettings>
     <AnperoFrontend.Properties.Settings>
       <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
-        <value>http://localhost:8433/AnperoService.asmx</value>
+        <value>http://wsv.anpero.com/AnperoService.asmx</value>
       </setting>
     </AnperoFrontend.Properties.Settings>
   </applicationSettings>
