--- a/08_Shop_MultiProduct/08_Shop_MultiProduct.csproj
+++ b/08_Shop_MultiProduct/08_Shop_MultiProduct.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\StaticController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -409,6 +410,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\Static\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
