--- a/09_Shop_MultiProduct/Web.config
+++ b/09_Shop_MultiProduct/Web.config
@@ -112,7 +112,7 @@
           <action type="Rewrite" url="product/ParentCategory?id={R:2}"/>
         </rule>
         <rule name="GroupProduct" stopProcessing="true">
-          <match url="^([^/]+)-g(\d+)?$"/>
+          <match url="^([^/]+)-g(\d+)$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
