--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,4 @@ Shop_07_MultiProduct/obj/
 09_Shop_MultiProduct/bin/AnperoFrontend.dll.config
 10_Theme_09_v2/bin/AnperoFrontend.dll.config
 09_Shop_MultiProduct/bin/AnperoFrontend.dll.config
+12_Shop_multiProduct/bin/System.Web.WebPages.dll
