--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,6 @@ Shop_07_MultiProduct/obj/
 12_Shop_multiProduct/bin/
 12_Shop_multiProduct/obj/
 12_Shop_multiProduct/bin/Antlr3.Runtime.dll
+09_Theme_08_v2/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+*.dll
+*.dll
