--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SearchResult.cs" />
     <Compile Include="StringHelpper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
