--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -952,6 +952,7 @@
     <Content Include="Views\Article\ChuyenDoiTiengViet.cshtml" />
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\Product\SearchAjax.cshtml" />
+    <Content Include="Views\Shared\product\_SearchBox.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
