--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -280,6 +280,7 @@
     <Content Include="assets\data\icon-s5.png" />
     <Content Include="assets\data\icon-s6.png" />
     <Content Include="assets\data\icon-sports.png" />
+    <Content Include="assets\data\vib.jpg" />
     <Content Include="assets\images\275px.jpg" />
     <Content Include="assets\data\introduce-logo.png" />
     <Content Include="assets\data\jewelry-slide.jpg" />
