--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ Shop_07_MultiProduct/obj/
 09_Theme_08_v2/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
 *.dll
 *.dll
+09_Theme_08_v2/obj/Release/build.force
+09_Theme_08_v2/obj/Debug/build.force
