--- a/09_Theme_08_v2/09_Theme_08_v2.csproj
+++ b/09_Theme_08_v2/09_Theme_08_v2.csproj
@@ -339,6 +339,7 @@
     <Content Include="Views\Shared\_partial\_MainFooter_1.cshtml" />
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\API\Index.cshtml" />
+    <Content Include="Views\Product\SearchAjax.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
