--- a/06_Shop_Onepage/06_Shop_OnePage.csproj
+++ b/06_Shop_Onepage/06_Shop_OnePage.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\StaticController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
