--- a/06_Shop_Onepage/06_Shop_OnePage.csproj
+++ b/06_Shop_Onepage/06_Shop_OnePage.csproj
@@ -423,6 +423,7 @@
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\Product\List_2.cshtml" />
     <Content Include="Views\Product\ListContent.cshtml" />
+    <Content Include="Views\Product\AjaxSearch.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
