--- a/09_Theme_08_v2/Web.config
+++ b/09_Theme_08_v2/Web.config
@@ -17,8 +17,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
 
-    <add key="storeID" value="48"/>
-    <add key="storeTokenKey" value="6f030b13-e665-4de5-bbbf-fe46a31a791d"/>
+    <!--<add key="storeID" value="48"/>
+    <add key="storeTokenKey" value="6f030b13-e665-4de5-bbbf-fe46a31a791d"/>-->
+    <add key="storeID" value="45"/>
+    <add key="storeTokenKey" value="64c42dba-c7f2-4990-9e5a-3e2369fe6176"/>
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
