--- a/09_Theme_08_v2/09_Theme_08_v2.csproj
+++ b/09_Theme_08_v2/09_Theme_08_v2.csproj
@@ -281,6 +281,7 @@
     <Content Include="assets\stylesheet\bootstrap.min.css" />
     <Content Include="assets\stylesheet\flexslider.css" />
     <Content Include="assets\stylesheet\font-awesome.css" />
+    <Content Include="assets\stylesheet\grey.css" />
     <Content Include="assets\stylesheet\jquery.bxslider.css" />
     <Content Include="assets\stylesheet\jquery.mobile-menu.css" />
     <Content Include="assets\stylesheet\NganLuongBankList.css" />
