--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <Content Include="assets\checkout.html" />
     <Content Include="assets\css\animate.css" />
+    <Content Include="assets\css\Green-style.css" />
     <Content Include="assets\css\NganLuongBankList.css" />
     <Content Include="assets\css\option2.css" />
     <Content Include="assets\css\option3.css" />
