--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -955,6 +955,7 @@
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\Product\SearchAjax.cshtml" />
     <Content Include="Views\Shared\product\_SearchBox.cshtml" />
+    <Content Include="Views\Shared\GoogleTranslate.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
