--- a/05_Shop_MultiProduct/05_Shop_MultiProduct.csproj
+++ b/05_Shop_MultiProduct/05_Shop_MultiProduct.csproj
@@ -365,6 +365,7 @@
     </Content>
     <Content Include="Web References\WebService\BlogItem.datasource">
       <DependentUpon>Reference.map</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Web References\WebService\BlogCategory.datasource">
       <DependentUpon>Reference.map</DependentUpon>
