--- a/02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj
+++ b/02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj
@@ -780,6 +780,67 @@
     <Content Include="assets\lib\bootstrap\js\bootstrap.js" />
     <Content Include="assets\lib\bootstrap\js\bootstrap.min.js" />
     <Content Include="assets\lib\bootstrap\js\npm.js" />
+    <Content Include="assets\lib\Content-Slider\dist\css\images\blank.gif" />
+    <Content Include="assets\lib\Content-Slider\dist\css\images\closedhand.cur" />
+    <Content Include="assets\lib\Content-Slider\dist\css\images\openhand.cur" />
+    <Content Include="assets\lib\Content-Slider\dist\css\slider-pro.css" />
+    <Content Include="assets\lib\Content-Slider\dist\css\slider-pro.min.css" />
+    <Content Include="assets\lib\Content-Slider\dist\js\jquery.sliderPro.js" />
+    <Content Include="assets\lib\Content-Slider\dist\js\jquery.sliderPro.min.js" />
+    <Content Include="assets\lib\Content-Slider\examples\css\examples.css" />
+    <Content Include="assets\lib\Content-Slider\examples\example1.html" />
+    <Content Include="assets\lib\Content-Slider\examples\example2.html" />
+    <Content Include="assets\lib\Content-Slider\examples\example3.html" />
+    <Content Include="assets\lib\Content-Slider\examples\example4.html" />
+    <Content Include="assets\lib\Content-Slider\examples\example5.html" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\blank.gif" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\fancybox_loading%402x.gif" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\fancybox_loading.gif" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\fancybox_overlay.png" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\fancybox_sprite%402x.png" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\fancybox_sprite.png" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\fancybox_buttons.png" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\jquery.fancybox-buttons.css" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\jquery.fancybox-buttons.js" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\jquery.fancybox-media.js" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\jquery.fancybox-thumbs.css" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\helpers\jquery.fancybox-thumbs.js" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\jquery.fancybox.css" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\jquery.fancybox.js" />
+    <Content Include="assets\lib\Content-Slider\libs\fancybox\jquery.fancybox.pack.js" />
+    <Content Include="assets\lib\Content-Slider\libs\jquery-1.11.0.min.js" />
+    <Content Include="assets\lib\Content-Slider\src\css\images\blank.gif" />
+    <Content Include="assets\lib\Content-Slider\src\css\images\closedhand.cur" />
+    <Content Include="assets\lib\Content-Slider\src\css\images\openhand.cur" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.arrows.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.buttons.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.caption.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.core.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.full-screen.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.layers.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.thumbnail-arrows.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.thumbnails.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.touch-swipe.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.video.css" />
+    <Content Include="assets\lib\Content-Slider\src\css\slider-pro.wp.css" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.arrows.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.autoplay.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.buttons.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.caption.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.conditionalImages.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.core.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.deepLinking.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.fade.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.fullScreen.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.keyboard.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.layers.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.lazyLoading.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.retina.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.thumbnailArrows.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.thumbnails.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.thumbnailTouchSwipe.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.touchSwipe.js" />
+    <Content Include="assets\lib\Content-Slider\src\js\jquery.sliderPro.video.js" />
     <Content Include="assets\lib\countdown\countdownBasic.html" />
     <Content Include="assets\lib\countdown\countdownGlowing.gif" />
     <Content Include="assets\lib\countdown\countdownLED.png" />
