--- a/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
+++ b/04_Shop_multiProduct/04_Shop_MultiProduct.csproj
@@ -925,6 +925,7 @@
     <Content Include="assets\lib\jquery-bxslider\readme.md" />
     <Content Include="handler\ProductHandler.ashx" />
     <Content Include="handler\PaymentHandler.ashx" />
+    <Content Include="assets\fonts\Lobster.otf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
