--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ Shop_07_MultiProduct/obj/
 02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj.user
 03_HR_Service_Frontend/03_HR.csproj.user
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
+09_Theme_08_v2/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+09_Theme_08_v2/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
