--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ Shop_07_MultiProduct/obj/
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
 09_Theme_08_v2/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 09_Theme_08_v2/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+*.cache
