--- a/09_Theme_08_v2/09_Theme_08_v2.csproj
+++ b/09_Theme_08_v2/09_Theme_08_v2.csproj
@@ -270,7 +270,6 @@
     <Content Include="assets\js\bootstrap.min.js" />
     <Content Include="assets\js\cloud-zoom.js" />
     <Content Include="assets\js\common.js" />
-    <Content Include="assets\js\express_buttons.js" />
     <Content Include="assets\js\jquery.bxslider.min.js" />
     <Content Include="assets\js\jquery.flexslider.js" />
     <Content Include="assets\js\jquery.min.js" />
@@ -456,11 +455,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>32561</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:32505</IISUrl>
+          <IISUrl>http://localhost:32509</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
