--- a/10_Shop_MultiProduct/Web.config
+++ b/10_Shop_MultiProduct/Web.config
@@ -16,8 +16,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="shortCacheTime" value="5" />
-    <add key="storeID" value="53" />
-    <add key="storeTokenKey" value="84a6d59e-60b8-4773-b9e8-c979e547f158" />
+    <!--<add key="storeID" value="53" />
+    <add key="storeTokenKey" value="84a6d59e-60b8-4773-b9e8-c979e547f158" />-->
+    <add key="storeID" value="24" />
+    <add key="storeTokenKey" value="344c74a3-71ad-42b7-96d4-4c6d5989c90b" />
   </appSettings> 
   <system.web>
     <authentication mode="None" />
