--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ Shop_07_MultiProduct/obj/
 02_BDS_BatDongSan_MultiLand/02_BatDongSan_MultiLand.csproj.user
 03_HR_Service_Frontend/03_HR.csproj.user
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
+10_Shop_MultiProduct/obj/
