--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ Shop_07_MultiProduct/obj/
 09_Shop_MultiProduct/obj/
 10_Theme_09_v2/obj/
 11_Company_Info/obj/
+10_Shop_MultiProduct/obj/
+09_Theme_08_v2/obj/
