--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ Shop_07_MultiProduct/obj/
 03_HR_Service_Frontend/03_HR.csproj.user
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
 10_Shop_MultiProduct/obj/
+10_Shop_MultiProduct/bin/
