--- a/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
+++ b/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
@@ -156,7 +156,20 @@
   <ItemGroup>
     <Content Include="assets\animate.css" />
     <Content Include="assets\animate.js" />
+    <Content Include="assets\css\animate.css" />
+    <Content Include="assets\css\bootstrap.min.css" />
+    <Content Include="assets\css\font-awesome.min.css" />
+    <Content Include="assets\css\lightbox.css" />
+    <Content Include="assets\css\normalize.css" />
+    <Content Include="assets\css\owl.carousel.min.css" />
+    <Content Include="assets\css\pogo-slide.css" />
+    <Content Include="assets\css\ProductListStyle.css" />
+    <Content Include="assets\css\responsive.css" />
+    <Content Include="assets\css\style.css" />
+    <Content Include="assets\css\theme.default.min.css" />
+    <Content Include="assets\fancybox_loading.gif" />
     <Content Include="assets\images\bg-menu.png" />
+    <Content Include="assets\images\fancybox_loading.gif" />
     <Content Include="assets\images\gachmenu.png" />
     <Content Include="assets\images\loading.gif" />
     <Content Include="assets\js\countdown\countdownBasic.html" />
