--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -48,9 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheHelper.cs" />
     <Compile Include="Constant.cs" />
+    <Compile Include="HashHelper.cs" />
+    <Compile Include="HttpRequesHelper.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="PaymentApi\NganLuong\APICheckoutV3.cs" />
+    <Compile Include="PaymentApi\VTC\PaymentControl.cs" />
+    <Compile Include="PaymentApi\VTC\RequestParam.cs" />
+    <Compile Include="PaymentApi\VTC\ReturnData.cs" />
     <Compile Include="PaymentMethod\PaymentMethod.cs" />
     <Compile Include="PaymentMethod\PaymentMethodControl.cs" />
     <Compile Include="SearchResult.cs" />
