--- a/10_Shop_MultiProduct/Web.config
+++ b/10_Shop_MultiProduct/Web.config
@@ -20,6 +20,11 @@
     <add key="storeTokenKey" value="84a6d59e-60b8-4773-b9e8-c979e547f158" />-->
     <add key="storeID" value="49" />
     <add key="storeTokenKey" value="85e19a50-c310-49ad-859e-bb321d22a04b" />
+
+    <add key="vtc_siteId" value="8032" />
+    <add key="vtc_receiver_account" value="0906006580" />
+    <add key="vtc_payment_currency" value="USD" />
+    <add key="vtc_MerchantPassword" value="FSfgasdfafsadf!!sdf654654654654654" />
   </appSettings> 
   <system.web>
     <authentication mode="None" />
