--- a/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
+++ b/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
@@ -406,7 +406,7 @@
     <Content Include="Views\API\Index.cshtml" />
     <Content Include="Views\Product\SearchAjax.cshtml" />
     <Content Include="Views\Brands\Index.cshtml" />
-    <Content Include="Views\Home\VTCCallBack.cshtml" />
+    <Content Include="Views\API\VTCCallBack.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
