--- a/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
+++ b/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
@@ -156,6 +156,25 @@
   <ItemGroup>
     <Content Include="assets\animate.css" />
     <Content Include="assets\animate.js" />
+    <Content Include="assets\html\404error.html" />
+    <Content Include="assets\html\about-us.html" />
+    <Content Include="assets\html\blog-detail.html" />
+    <Content Include="assets\html\blog.html" />
+    <Content Include="assets\html\checkout-billing-info.html" />
+    <Content Include="assets\html\checkout-method.html" />
+    <Content Include="assets\html\checkout.html" />
+    <Content Include="assets\html\contact-us.html" />
+    <Content Include="assets\html\dashboard.html" />
+    <Content Include="assets\html\grid.html" />
+    <Content Include="assets\html\index.html" />
+    <Content Include="assets\html\list.html" />
+    <Content Include="assets\html\login.html" />
+    <Content Include="assets\html\multiple-addresses.html" />
+    <Content Include="assets\html\newsletter.html" />
+    <Content Include="assets\html\product-detail.html" />
+    <Content Include="assets\html\quickview.html" />
+    <Content Include="assets\html\shopping-cart.html" />
+    <Content Include="assets\html\wishlist.html" />
     <Content Include="assets\images\bg-menu.png" />
     <Content Include="assets\images\gachmenu.png" />
     <Content Include="assets\images\loading.gif" />
@@ -321,55 +340,198 @@
     <Content Include="assets\fonts\SFUFuturaBook.TTF" />
     <Content Include="assets\fonts\SFUFuturaBold.TTF" />
     <Content Include="handler\PaymentHandler.ashx" />
-    <Content Include="Html\blogs\news.atom" />
-    <Content Include="Html\blogs\news\tagged\anti-ageing.atom" />
-    <Content Include="Html\blogs\news\tagged\combination.atom" />
-    <Content Include="Html\blogs\news\tagged\dark-circles.atom" />
-    <Content Include="Html\blogs\news\tagged\eyes.atom" />
-    <Content Include="Html\blogs\news\tagged\nails.atom" />
-    <Content Include="Html\blogs\news\tagged\tools-accessories.atom" />
-    <Content Include="Html\cdn.shopify.com\s\assets\shop_events_listener-acf771159f9849ef6e5265782c99efe8b99406214c96a4373224ecafe285d7bb.js" />
-    <Content Include="Html\cdn.shopify.com\s\assets\storefront\features-e87392afe29fe307282f4e6aad12cb4bcc2afefd6b7febf0b70edfd315f9684c.js" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_1_290x290_crop_center3ce7.jpg" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_1_350x308_crop_center3ce7.jpg" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_2_290x290_crop_centerb3a6.jpg" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_2_350x308_crop_centerb3a6.jpg" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_3_290x290_crop_center5214.jpg" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\articles\blog_3_350x308_crop_center5214.jpg" />
     <Content Include="assets\assets.js" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\assets\blank.html" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\assets\currency-toolsf18a.js" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\assets\fancybox_loading.gif" />
     <Content Include="assets\responsive.css" />
     <Content Include="assets\shop.js" />
     <Content Include="assets\loadingLogo.gif" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\assets\style.scssf18a.css" />
     <Content Include="assets\scripts.js" />
-    <Content Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\assets\fontawesome-webfont9e99.eot" />
+    <Content Include="assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Html\.idea\.name" />
+    <Content Include="Html\.idea\HTML.iml" />
+    <Content Include="Html\css\style.scss" />
+    <Content Include="Html\css\_footer.scss" />
+    <Content Include="Html\css\_header.scss" />
+    <Content Include="Html\css\_responsive.scss" />
+    <Content Include="Html\css\_value.scss" />
+    <Content Include="Html\fonts\fontawesome-webfont.eot" />
+    <Content Include="Html\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Html\fonts\fontawesome-webfont.woff" />
+    <Content Include="Html\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Html\fonts\FontAwesome.otf" />
+    <Content Include="Html\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Html\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Html\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Html\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Content Include="Html\blogs\news.html" />
-    <Content Include="Html\blogs\news\also-you-can-always-contact-our-consultants.html" />
-    <Content Include="Html\blogs\news\our-company-advocates-the-postulate-that-the-health-is-the-biggest-value-in-our-lives.html" />
-    <Content Include="Html\blogs\news\our-goal-is-to-help-you-stay-healthy-as-well-as-gorgeous-at-the-same-time.html" />
-    <Content Include="Html\blogs\news\tagged\anti-ageing.html" />
-    <Content Include="Html\blogs\news\tagged\combination.html" />
-    <Content Include="Html\blogs\news\tagged\dark-circles.html" />
-    <Content Include="Html\blogs\news\tagged\eyes.html" />
-    <Content Include="Html\blogs\news\tagged\nails.html" />
-    <Content Include="Html\blogs\news\tagged\tools-accessories.html" />
-    <Content Include="Html\cart.html" />
-    <Content Include="Html\collections.html" />
-    <Content Include="Html\index.html" />
-    <Content Include="Html\pages\about-us.html" />
-    <Content Include="Html\pages\contact-us.html" />
-    <Content Include="Html\pages\faq.html" />
-    <Content Include="Html\pages\password-page.html" />
-    <Content Include="Html\pages\privacy-policy.html" />
-    <Content Include="Html\pages\services.html" />
-    <Content Include="Html\pages\wishlist.html" />
+    <Content Include="Html\.idea\encodings.xml" />
+    <Content Include="Html\.idea\misc.xml" />
+    <Content Include="Html\.idea\modules.xml" />
+    <Content Include="Html\.idea\workspace.xml" />
+    <Content Include="Html\css\bootstrap-datetimepicker.css" />
+    <Content Include="Html\css\bootstrap.min.css" />
+    <Content Include="Html\css\font-awesome.min.css" />
+    <Content Include="Html\css\owl.carousel.min.css" />
+    <Content Include="Html\css\style.css" />
+    <Content Include="Html\fonts\fontawesome-webfont.svg" />
+    <Content Include="Html\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Html\html\detail.html" />
+    <Content Include="Html\html\home.html" />
+    <Content Include="Html\html\list-product.html" />
+    <Content Include="Html\images\banner.jpg" />
+    <Content Include="Html\images\bg-menu.png" />
+    <Content Include="Html\images\call.png" />
+    <Content Include="Html\images\close.png" />
+    <Content Include="Html\images\icons\549382_669482593182702_21641337532994228_n.jpg" />
+    <Content Include="Html\images\icons\bg_pd_top.png" />
+    <Content Include="Html\images\icons\bg_seller.png" />
+    <Content Include="Html\images\icons\checkbox.png" />
+    <Content Include="Html\images\icons\checked.png" />
+    <Content Include="Html\images\icons\fancybox_sprite.png" />
+    <Content Include="Html\images\icons\icon-check.png" />
+    <Content Include="Html\images\icons\icon-left.png" />
+    <Content Include="Html\images\icons\icon-menu-right.png" />
+    <Content Include="Html\images\icons\icon-menu.png" />
+    <Content Include="Html\images\icons\icon-right.png" />
+    <Content Include="Html\images\icons\icon-title.png" />
+    <Content Include="Html\images\icons\icon_avatar.png" />
+    <Content Include="Html\images\icons\product_policy_1.png" />
+    <Content Include="Html\images\icons\product_policy_2.png" />
+    <Content Include="Html\images\icons\product_policy_3.png" />
+    <Content Include="Html\images\icons\product_policy_4.png" />
+    <Content Include="Html\images\img-1.jpg" />
+    <Content Include="Html\images\img-10.jpg" />
+    <Content Include="Html\images\img-100.jpg" />
+    <Content Include="Html\images\img-101.jpg" />
+    <Content Include="Html\images\img-102.jpg" />
+    <Content Include="Html\images\img-103.jpg" />
+    <Content Include="Html\images\img-104.jpg" />
+    <Content Include="Html\images\img-105.jpg" />
+    <Content Include="Html\images\img-106.jpg" />
+    <Content Include="Html\images\img-107.jpg" />
+    <Content Include="Html\images\img-108.jpg" />
+    <Content Include="Html\images\img-109.jpg" />
+    <Content Include="Html\images\img-11.jpg" />
+    <Content Include="Html\images\img-110.jpg" />
+    <Content Include="Html\images\img-111.jpg" />
+    <Content Include="Html\images\img-112.jpg" />
+    <Content Include="Html\images\img-113.jpg" />
+    <Content Include="Html\images\img-114.jpg" />
+    <Content Include="Html\images\img-115.jpg" />
+    <Content Include="Html\images\img-116.jpg" />
+    <Content Include="Html\images\img-117.jpg" />
+    <Content Include="Html\images\img-118.jpg" />
+    <Content Include="Html\images\img-119.jpg" />
+    <Content Include="Html\images\img-119.png" />
+    <Content Include="Html\images\img-12.jpg" />
+    <Content Include="Html\images\img-120.jpg" />
+    <Content Include="Html\images\img-120.png" />
+    <Content Include="Html\images\img-13.jpg" />
+    <Content Include="Html\images\img-14.jpg" />
+    <Content Include="Html\images\img-15.jpg" />
+    <Content Include="Html\images\img-16.jpg" />
+    <Content Include="Html\images\img-17.jpg" />
+    <Content Include="Html\images\img-18.jpg" />
+    <Content Include="Html\images\img-19.jpg" />
+    <Content Include="Html\images\img-2.jpg" />
+    <Content Include="Html\images\img-20.jpg" />
+    <Content Include="Html\images\img-21.jpg" />
+    <Content Include="Html\images\img-22.jpg" />
+    <Content Include="Html\images\img-23.jpg" />
+    <Content Include="Html\images\img-24.jpg" />
+    <Content Include="Html\images\img-25.jpg" />
+    <Content Include="Html\images\img-26.jpg" />
+    <Content Include="Html\images\img-27.jpg" />
+    <Content Include="Html\images\img-28.jpg" />
+    <Content Include="Html\images\img-29.jpg" />
+    <Content Include="Html\images\img-3.jpg" />
+    <Content Include="Html\images\img-30.jpg" />
+    <Content Include="Html\images\img-31.jpg" />
+    <Content Include="Html\images\img-32.jpg" />
+    <Content Include="Html\images\img-33.jpg" />
+    <Content Include="Html\images\img-34.jpg" />
+    <Content Include="Html\images\img-35.jpg" />
+    <Content Include="Html\images\img-36.jpg" />
+    <Content Include="Html\images\img-37.jpg" />
+    <Content Include="Html\images\img-38.jpg" />
+    <Content Include="Html\images\img-39.jpg" />
+    <Content Include="Html\images\img-4.jpg" />
+    <Content Include="Html\images\img-40.jpg" />
+    <Content Include="Html\images\img-41.jpg" />
+    <Content Include="Html\images\img-42.jpg" />
+    <Content Include="Html\images\img-43.jpg" />
+    <Content Include="Html\images\img-44.jpg" />
+    <Content Include="Html\images\img-45.jpg" />
+    <Content Include="Html\images\img-46.jpg" />
+    <Content Include="Html\images\img-47.jpg" />
+    <Content Include="Html\images\img-48.jpg" />
+    <Content Include="Html\images\img-49.jpg" />
+    <Content Include="Html\images\img-5.jpg" />
+    <Content Include="Html\images\img-50.jpg" />
+    <Content Include="Html\images\img-51.jpg" />
+    <Content Include="Html\images\img-52.jpg" />
+    <Content Include="Html\images\img-53.jpg" />
+    <Content Include="Html\images\img-54.jpg" />
+    <Content Include="Html\images\img-55.jpg" />
+    <Content Include="Html\images\img-56.jpg" />
+    <Content Include="Html\images\img-57.jpg" />
+    <Content Include="Html\images\img-58.jpg" />
+    <Content Include="Html\images\img-59.jpg" />
+    <Content Include="Html\images\img-6.jpg" />
+    <Content Include="Html\images\img-60.jpg" />
+    <Content Include="Html\images\img-61.jpg" />
+    <Content Include="Html\images\img-62.jpg" />
+    <Content Include="Html\images\img-63.jpg" />
+    <Content Include="Html\images\img-64.jpg" />
+    <Content Include="Html\images\img-65.jpg" />
+    <Content Include="Html\images\img-66.jpg" />
+    <Content Include="Html\images\img-67.jpg" />
+    <Content Include="Html\images\img-68.jpg" />
+    <Content Include="Html\images\img-69.jpg" />
+    <Content Include="Html\images\img-7.jpg" />
+    <Content Include="Html\images\img-70.jpg" />
+    <Content Include="Html\images\img-71.jpg" />
+    <Content Include="Html\images\img-72.jpg" />
+    <Content Include="Html\images\img-73.jpg" />
+    <Content Include="Html\images\img-74.jpg" />
+    <Content Include="Html\images\img-75.jpg" />
+    <Content Include="Html\images\img-76.jpg" />
+    <Content Include="Html\images\img-77.jpg" />
+    <Content Include="Html\images\img-78.jpg" />
+    <Content Include="Html\images\img-79.jpg" />
+    <Content Include="Html\images\img-8.jpg" />
+    <Content Include="Html\images\img-80.jpg" />
+    <Content Include="Html\images\img-81.jpg" />
+    <Content Include="Html\images\img-82.jpg" />
+    <Content Include="Html\images\img-83.jpg" />
+    <Content Include="Html\images\img-84.jpg" />
+    <Content Include="Html\images\img-85.jpg" />
+    <Content Include="Html\images\img-86.jpg" />
+    <Content Include="Html\images\img-87.jpg" />
+    <Content Include="Html\images\img-88.jpg" />
+    <Content Include="Html\images\img-89.jpg" />
+    <Content Include="Html\images\img-9.jpg" />
+    <Content Include="Html\images\img-90.jpg" />
+    <Content Include="Html\images\img-91.jpg" />
+    <Content Include="Html\images\img-92.jpg" />
+    <Content Include="Html\images\img-93.jpg" />
+    <Content Include="Html\images\img-94.jpg" />
+    <Content Include="Html\images\img-95.jpg" />
+    <Content Include="Html\images\img-96.jpg" />
+    <Content Include="Html\images\img-97.jpg" />
+    <Content Include="Html\images\img-98.jpg" />
+    <Content Include="Html\images\img-99.jpg" />
+    <Content Include="Html\images\logo.png" />
+    <Content Include="Html\images\logo_ft.png" />
+    <Content Include="Html\images\mobile_bg.svg" />
+    <Content Include="Html\images\to-top.png" />
+    <Content Include="Html\js\bootstrap-datetimepicker.js" />
+    <Content Include="Html\js\bootstrap.min.js" />
+    <Content Include="Html\js\javascript.js" />
+    <Content Include="Html\js\jquery-1.10.2.min.js" />
+    <Content Include="Html\js\owl.carousel.min.js" />
     <Content Include="Scripts\Anpero.Common.js" />
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
@@ -460,10 +622,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Html\cdn.shopify.com\s\assets\themes_support\" />
-    <Folder Include="Html\cdn.shopify.com\s\files\1\0079\6649\0720\t\2\compiled_assets\" />
-    <Folder Include="Html\cdn.shopify.com\s\javascripts\tricorder\" />
-    <Folder Include="Html\products\products\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
