--- a/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
+++ b/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
@@ -555,6 +555,8 @@
     <Content Include="Views\API\Index.cshtml" />
     <Content Include="Views\Product\SearchAjax.cshtml" />
     <Content Include="Views\Brands\Index.cshtml" />
+    <Content Include="Views\Shared\_partial\_HeaderPartial.cshtml" />
+    <Content Include="Views\Shared\_partial\_FooterPartial.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
