--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Http">
       <HintPath>..\..\WareHouse V2\Package_bin\System.Web.Http.dll</HintPath>
@@ -52,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\CacheService.cs" />
+    <Compile Include="Caching\ICacheService.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="HttpHelper.cs" />
     <Compile Include="Paging.cs" />
