--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ Shop_07_MultiProduct/obj/
 01_Company_Info/obj/
 01_Company_Info/bin/
 12.2_not13_Shop_MultiProduct/bin/
+12.2_not13_Shop_MultiProduct/obj/
